Continuacion de maquetado

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,4 +16,8 @@
 .carousel-slider .indicators .indicator-item {
   background-color: rgba(246, 68, 81, 0.29); }
 
+.text-morado {
+  color: #49233b;
+  font-weight: 800; }
+
 /*# sourceMappingURL=style.css.map */
