registro de ultimos avances para la entrega final

--- a/public/views/c_creaUsuario.html
+++ b/public/views/c_creaUsuario.html
@@ -51,7 +51,7 @@
       				</div>
 
               <div class="carousel-fixed-item center col s12">
-                <a class="btn btn-large waves-effect boton-amarillo white-text darken-text-2 col s12" href="views/d_bien.html">CREAR CUENTA</a>
+                <a class="btn btn-large waves-effect boton-amarillo white-text darken-text-2 col s12" href="../d_bien.html">CREAR CUENTA</a>
               </div>
   				</form>
   			</div>
